Change Item creation logic
Now it uses Item map, and use Dto->model->Dto transfers